- ib: fix leaking connection structs (thanks to D. Beilloin)
- ib: use faster 1k mtu
- ib: cleanup warning texts
- configure: add option to disable AIO threaded callbacks
- configure: fix GM and IB to enable only when explicitly requested
- add timestamps to gossip debugging to file and stderr (not syslog)
- ib: initial cancel support, works for pvfs2-ls


pvfs2-0.6.5
===========
- broke several server state machines into multiple nested machines
- some PAV cleanups, including support for a larger number of meta
  servers than io servers
- update k_size (number of keyvals) in dspace attr cache when the
  number of keyvals on disk changes
- replaced all vfs 64 bit operation tags to be unsigned
- replaced pint-dev code to work with 64 bit unsigned tags
- moved all op initialization out of the constructor and into the
  op_alloc routine
- fixed tag cancellation upcall/method to use a 64 bit tag, rather
  than an unsigned long
- added a PVFS_util method to get the current system and return it as
  a valid PVFS_time type
- added arguments to the crdirent/chdirent/rmdirent operations that
  now can take optional parent atime/mtime/ctime fields
- added support on server *dirent operations that update the parent
  time attributes (if specified) on successful completion of the
  *dirent operation; null/zero time fields are not modified
- modified sys-create/sys-mkdir/sys-symlink/sys-rename/sys-remove to
  work with the new operations properly; in general,
  create/remove/rename operations updates the mtime and ctime of the
  parent directory, which is now properly supported
- moved some common server side attribute handling code into a macro
  to make it re-useable across several server state machines
- updated en{de}coding of modified operations
- remove sync calls on readonly trove operations
- added sanity check to kernel's device poll; makes sure the device is
  opened by only one user before returning valid results